--- a/index.html
+++ b/index.html
@@ -4,173 +4,93 @@
         <meta charset="UTF-8" />
         <meta
             name="viewport"
-            content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
-        <title>My Portfoilo</title>
-        <link rel="stylesheet" href="style.css" />
-        <link rel="icon" href="img/profile.ico" />
+            content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=5, user-scalable=yes" />
+        <meta name="author" content="AI-Emergency" />
+        <meta
+            name="description"
+            content="AI-Emergency: Cutting-edge AI solutions for crisis management, disaster response, and rapid decision-making. Harness the power of AI for real-time emergency assistance." />
+        <meta
+            name="keywords"
+            content="AI emergency, crisis management, disaster response, real-time AI assistance, emergency solutions, AI-powered decision-making, rapid crisis intervention, smart emergency systems" />
+        <title>AI-Emergency</title>
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="icon" href="img/illustrator.ico" />
         <script src="script.js"></script>
     </head>
     <body>
         <header>
             <nav>
-                <div class="logo">IsMaN</div>
                 <ul>
-                    <li><a href="index.html" onclick="showSection('home')">Home</a></li>
-                    <li><a href="#" onclick="showSection('certificates')">Certificates</a></li>
-                    <li><a href="#" onclick="showSection('projects')">Projects</a></li>
-                    <li><a href="#" onclick="showSection('contacts')">My contacts</a></li>
+                    <li><a href="index.html">AI-EMERGENCY</a></li>
                 </ul>
-                <div class="search-container">
-                    <form action="https://github.com/features/copilot" method="get">
-                        <input type="text" placeholder="Search..." class="search-input" />
-                        <button class="search-button"><img src="img/search.png" width="16" height="14" /></button>
-                    </form>
-                </div>
             </nav>
-            <div id="home" class="content">
-                <div class="info">
-                    <div class="img1">
-                        <img src="img/html-wallpaper.jpg" />
-                    </div>
-                    <div class="t1">
-                        <h1>IsMaN-programmer</h1>
-                        <p>
-                            About HTML (HyperText Markup Language) is the backbone of web development, and I take pride
-                            in mastering its foundational concepts. It's the building block that structures content on
-                            the web, and I enjoy crafting clean, semantic code to ensure accessibility and usability for
-                            every project.
-                        </p>
-                        <p>With my experience in HTML, I can:</p>
-                        <p>Build responsive and well-structured web pages.</p>
-                        <p>Utilize semantic elements for improved SEO and readability.</p>
-                        <p>Implement multimedia like images, videos, and interactive forms.</p>
-                        <p>Create layouts that enhance user experience by combining HTML with CSS and JavaScript.</p>
-                        <p>
-                            From simple personal websites to more complex projects, HTML allows me to bring ideas to
-                            life on the web. It's where every journey into the digital world begins, and I’m excited to
-                            use my skills to design meaningful and visually appealing web experiences.
-                        </p>
-                        <h1>HTML</h1>
+            <h1 class="text">Why do people choose us?</h1>
+            <div class="blocks">
+                <div class="block">
+                    <img src="img/artificial-intelligence.gif" />
+                    <div class="info">
+                        <h3>MEDICINE</h3>
+                        <h4>1. Medical Imaging & Diagnosis 🩺</h4>
+                        <h4>2. Robotic Surgery & Automation 🤖</h4>
+                        <h4>3. Predictive Analytics & Early Detection 🔍</h4>
+                        <h4>4. Personalized Treatment & Drug Develop 💊</h4>
+                        <h4>5. Virtual Health Assistants & Telemedicine 🌐</h4>
                     </div>
                 </div>
-                <div class="info2">
-                    <div class="img1">
-                        <img src="img/css-wallpaper.png" />
-                    </div>
-                    <div class="t1">
-                        <h1>IsMaN-programmer</h1>
-                        <p>
-                            About CSS (Cascading Style Sheets) is where creativity meets functionality in web
-                            development. It empowers me to transform plain HTML into visually stunning and user-friendly
-                            designs. With CSS, I can shape the look, feel, and layout of websites, ensuring they are
-                            both attractive and responsive.
-                        </p>
-                        <p>With my experience in CSS, I can:</p>
-                        <p>Create responsive and adaptive designs for seamless user experiences across devices.</p>
-                        <p>Leverage modern CSS frameworks and techniques to streamline development.</p>
-                        <p>Utilize CSS animations and transitions to add interactivity and depth to websites.</p>
-                        <p>Create layouts that enhance user experience by combining HTML with CSS and JavaScript.</p>
-                        <p>
-                            From simple personal websites to more complex projects, CSS allows me to bring ideas to life
-                            on the web. It's where every journey into the digital world begins, and I’m excited to use
-                            my skills to design meaningful and visually appealing web experiences.
-                        </p>
-                        <h1>CSS</h1>
+                <div class="block">
+                    <img src="img/hand.gif" />
+                    <div class="info">
+                        <h3>Advice</h3>
+                        <h4>1. Preventive Care & Risk Prediction 💡</h4>
+                        <h4>2. Mental Health & Wellness Guidance 🧠</h4>
+                        <h4>3. AI-Assisted Rehabilitation & Recovery 🏃‍♂️</h4>
+                        <h4>4. Personalized Health Recommendations 🔍</h4>
+                        <h4>5. Symptom Checkers & Diagnosis Support 🏥</h4>
                     </div>
                 </div>
-                <div class="info4">
-                    <h1>My packet of languages</h1>
-                    <div class="icons">
-                        <div>
-                            <img src="img/free-icon-css-3-732190.png" />
-                        </div>
-                        <div>
-                            <img src="img/free-icon-html-1051277.png" />
-                        </div>
-                        <div>
-                            <img src="img/free-icon-java-script-1199124.png" />
-                        </div>
+                <div class="block">
+                    <img src="img/brain.gif" />
+                    <div class="info">
+                        <h3>Update</h3>
+                        <h4>1. AI for Rare Disease Diagnosis 🧬</h4>
+                        <h4>2. AI-Assisted Personalized Medicine 🔬</h4>
+                        <h4>3. AI for Medical Education & Training 🎓</h4>
+                        <h4>4. Enhanced Medical Imaging Accuracy 🩺</h4>
+                        <h4>5. AI in Global Health & Epidemic Prediction 🌍</h4>
                     </div>
                 </div>
             </div>
+            <hr>
         </header>
-        <div id="certificates" class="content" style="display: none">
-            <div class="t2">
-                <div class="t11">
-                    <h1>My certificates</h1>
-                </div>
+        <main>
+           <div class="logo">
+               <img src="img/illustrator.ico">
+           </div>
+            <div class="find">
+                <form action="#" method="get">
+                    <input type="text" id="user-input" placeholder="Write your problem..." class="input" />
+                    <a href="#" onclick="sendMessage()">
+                        <img src="img/analysis.png">
+                    </a>
+                </form>
+                <div id="chat-box"></div>
             </div>
-            <div class="t3">
-                <div class="t12">
-                    <img src="img/photo_2025-03-11_19-17-10.jpg" />
-                    <img src="img/photo_2025-03-11_19-17-22.jpg" />
+            <footer>
+               <div class="contacts">
+                <h1>Our social Medias</h1>
+                <div class="icons">
+                    <div class="ico">
+                        <img src="img/free-icon-instagram-2111463.png">
+                    </div>
+                    <div class="ico">
+                        <img src="img/free-icon-telegram-2111646.png">
+                    </div>
+                    <div class="ico">
+                        <img src="img/free-icon-youtube-1384060.png">
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div id="projects" class="content" style="display: none">
-            <div class="t2">
-                <div class="t11">
-                    <h1>My 5 websites projects</h1>
                 </div>
-            </div>
-            <div class="t3">
-                <div class="t11">
-                    <img src="img/folder.png" width="200" />
-                    <h1>#1</h1>
-                    <a href="projects/1.zip" download>Download</a>
-                </div>
-            </div>
-            <div class="t3">
-                <div class="t11">
-                    <img src="img/folder.png" width="200" />
-                    <h1>#2</h1>
-                    <a href="#" download>Download</a>
-                </div>
-            </div>
-            <div class="t3">
-                <div class="t11">
-                    <img src="img/folder.png" width="200" />
-                    <h1>#3</h1>
-                    <a href="#" download>Download</a>
-                </div>
-            </div>
-            <div class="t3">
-                <div class="t11">
-                    <img src="img/folder.png" width="200" />
-                    <h1>#4</h1>
-                    <a href="#" download>Download</a>
-                </div>
-            </div>
-            <div class="t3">
-                <div class="t11">
-                    <img src="img/folder.png" width="200" />
-                    <h1>#5</h1>
-                    <a href="#" download>Download</a>
-                </div>
-            </div>
-        </div>
-        <div id="contacts" class="content" style="display: none">
-            <div class="t2">
-                <div class="t11">
-                    <h1>My contacts</h1>
-                </div>
-            </div>
-            <div class="conall">
-                <div class="contact">
-                    <img src="img/telegram.png" />
-                </div>
-                <div class="contact">
-                    <img src="img/instagram.png" />
-                </div>
-                <div class="contact">
-                    <img src="img/youtube.png" />
-                </div>
-            </div>
-            <div class="contact">
-                <img src="img/mobile.png" />
-                <h1>My number</h1>
-                <h1>+998 33 415 88 04</h1>
-            </div>
-        </div>
+            </footer>
+        </main>
     </body>
 </html>
