--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="block">
-                    <img src="img/hand.gif" />
+                    <img src="img/hand-raising.gif" />
                     <div class="info">
                         <h3>Advice</h3>
                         <h4>1. Preventive Care & Risk Prediction 💡</h4>
@@ -60,37 +60,61 @@
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr />
         </header>
         <main>
-           <div class="logo">
-               <img src="img/illustrator.ico">
-           </div>
+            <div class="logo">
+                <img src="img/illustrator.ico" />
+            </div>
             <div class="find">
                 <form action="#" method="get">
                     <input type="text" id="user-input" placeholder="Write your problem..." class="input" />
                     <a href="#" onclick="sendMessage()">
-                        <img src="img/analysis.png">
+                        <img src="img/analysis.png" />
                     </a>
                 </form>
+                <div class="buttons">
+                    <div class="button">
+                        <button>#Health</button>
+                    </div>
+                    <div class="button">
+                        <button>#Medical</button>
+                    </div>
+                    <div class="button">
+                        <button>#Surgery</button>
+                    </div>
+                    <div class="button">
+                        <button>#Emergency</button>
+                    </div>
+                    <div class="button medicine">
+                        <button>#Medicine</button>
+                    </div>
+                    
+                </div>
                 <div id="chat-box"></div>
             </div>
-            <footer>
-               <div class="contacts">
-                <h1>Our social Medias</h1>
+        </main>
+        <footer>
+            <div class="contacts">
+                <h1>Contact information</h1>
                 <div class="icons">
                     <div class="ico">
-                        <img src="img/free-icon-instagram-2111463.png">
+                        <a href="https://help.instagram.com/963211828280354?helpref=faq_content">
+                            <img src="img/instagram.png" />
+                        </a>
                     </div>
                     <div class="ico">
-                        <img src="img/free-icon-telegram-2111646.png">
+                        <a href="https://discord.com/invite/learnaitogether">
+                            <img src="img/discord.png" />
+                        </a>
                     </div>
                     <div class="ico">
-                        <img src="img/free-icon-youtube-1384060.png">
+                        <a href="https://t.me/Artificial_intelligence_in">
+                            <img src="img/telegram.png" />
+                        </a>
                     </div>
                 </div>
-                </div>
-            </footer>
-        </main>
+            </div>
+        </footer>
     </body>
 </html>
